# EurekaAgent

./: .coverage  .env.example  .gitignore  AgentFrame-PRD.md  README.md  SPEC.md  config.env  config.env.example  docker-compose.yml  prompt.md  pyproject.toml  requirement.md  requirements.txt  run_demo.bat  run_demo.ps1  todo_list.md
None/: chroma.sqlite3
agentframe/: __init__.py
agentframe/api/: __init__.py  routes.py  service.py
agentframe/core/: __init__.py  agent.py  context.py  session.py
agentframe/llm/: __init__.py  anthropic.py  base.py  deepseek.py  openai.py
agentframe/memory/: __init__.py  base.py  episodic.py  manager.py  perceptual.py  semantic.py  short_term.py  vector.py  working.py
agentframe/tools/: __init__.py  registry.py  validator.py
agentframe/tools/builtins/: __init__.py  calculator.py  file_ops.py  web_search.py
docs/: memory-architecture.md
examples/: demo_agent.py
tests/unit/: test_agent.py  test_api.py  test_builtins.py  test_llm_base.py  test_llm_openai.py  test_memory.py  test_memory_layers.py  test_tool_registry.py
